# pinwheel

./: .editorconfig  .gitignore  README.md  cc.placid.Pinwheel.json  meson.build
data/: cc.placid.Pinwheel.desktop.in  cc.placid.Pinwheel.gschema.xml  cc.placid.Pinwheel.metainfo.xml.in  cc.placid.Pinwheel.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  pw-application.c  pw-application.h  pw-canvas-object.c  pw-canvas-object.h  pw-canvas.c  pw-canvas.h  pw-window.c  pw-window.h  pw-window.ui  pw.gresource.xml
src/canvas/: meson.build  pw-canvas.c  pw-canvas.h  pw-element-group.c  pw-element-group.h  pw-element-rectangle.c  pw-element-rectangle.h  pw-element.c  pw-element.h
